more tests with no errors and no window showing